--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,19 @@
   "presets": [["@babel/preset-env", {
     "useBuiltIns": "usage",
     "corejs": 3
-    }]]
+    }]],
+    "env": {
+      "test": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            {
+              "targets": {
+                "node": "current"
+              }
+            }
+          ]
+        ]
+      }
+    }
   }
